--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<div><img src="sky.jpeg" alt="Night Sky" syle="width:75%;max-width:700px"></div>
 
 </body>
 </html>
